--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -45,3 +45,6 @@ $light-border-color: #DCDCDC !important;
 $partners-mobile-background-color: #FCFCFC !important;
 $streetcode-background-color:#FCFCFC !important;
 $catalog-background-color: #F5F5F5 !important;
+
+$sliders-text-grey-color: #6D6D6D !important;
+$sliders-text-lighter-grey-color: #ADADAD !important;
