--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -7,8 +7,6 @@
 
 
 .mainPageStreetCodeSlider {
-  
-
     .itemStreetCodeMainPage {
         @include mut.flexed(row, center, center, wrap);
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
@@ -16,12 +14,14 @@
         @include mut.full-rounded(50px);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
-        background-color: #FFFFFF;
+        background-color: c.$pure-white-color;
         margin-left: 20px;
+
         @media (min-width: 768px) and (max-width: 1024px) {
              @include mut.sized(266px, 402px);
             margin-bottom: 20px;
         }
+
         @media screen and (max-width: 767px) {
             @include mut.sized(310px, 462px);
         }
@@ -31,11 +31,13 @@
         @include mut.full-rounded(53px);
         @include mut.sized(294px, 398px);
         flex: 0 0 f.pxToRem(294px);
-        background-color: #FFFFFF;
+        background-color: c.$pure-white-color;
         justify-self: flex-start;
+
         @media (min-width: 768px) and (max-width: 1024px) {
             @include mut.sized(266px, 338px);
         }
+
         @media screen and (max-width: 767px) {
             @include mut.sized(100%, 398px);
         }
@@ -47,10 +49,12 @@
         @include mut.full-rounded(50px);
         @include mut.parent-sized();
         @include mut.flex-centered();
+
         @media (min-width: 768px) and (max-width: 1024px) {
                 @include mut.sized(100%, 338px);
                 border-bottom: 0px !important; 
             }
+
         @media screen and (max-width: 767px) {
                 @include mut.sized(100%, 398px);
                 border-bottom: 0px !important;
@@ -68,30 +72,28 @@
         flex: 1 1 auto;
         position: relative;
         @media screen and (max-width: 1024px) {
-                height: fit-content;    
+                height: fit-content;  
+
                 .textContainer {
                     height: 100%;
                     width: 100%;
-                    display: flex;
-                    flex-direction: column;
-                    text-align: center;               
+                    @include mut.flex-centered($direction:column);           
                 }
             }
     }
 
-
-        .streetcodeAlias {
-            color: #6D6D6D;
-            @include mut.rem-margined(9px, 0px, 0px, 0px);
-            @include mut.with-font($font-weight: 500, $font-size: 20px);
+    .streetcodeAlias {
+        color: c.$sliders-text-grey-color;
+        @include mut.rem-margined(9px, 0px, 0px, 0px);
+        @include mut.with-font($font-weight: 500, $font-size: 20px);
     
-            @media screen and (max-width: 1024px) {
-                @include mut.rem-margined(0px, 0px, 0px, 0px);
-                color: #1D1F23;
-                @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
-                line-height: f.pxToRem(14.06px);
-            }
+        @media screen and (max-width: 1024px) {
+            @include mut.rem-margined(0px, 0px, 0px, 0px);
+            color: c.$lighter-black-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
+            line-height: f.pxToRem(14.06px);
         }
+    }
 
     .streetcodeLink {
       @include mut.truncated($line-num: 1);
@@ -100,12 +102,14 @@
       bottom: 1px;
       display: flex;
       color: c.$dark-red-color;
+
       &:hover {
           text-decoration: underline;
       }
+
       @media screen and (max-width: 1024px) {
             @include mut.rem-margined(0px, 0px, 0px, 0px);
-            color: #891F16;
+            color: c.$dark-red-color;
             @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
             line-height: f.pxToRem(14.06px);
             width: 100%;
@@ -117,20 +121,17 @@
     .streercodeTitle {
         @include mut.rem-padded($top: 18px, $right: 0px, $bottom: 0px, $left: 0px);
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
-        color: #1D1F23;
-        line-height: f.pxToRem(40px);
-        
+        color: c.$lighter-black-color;
+        line-height: f.pxToRem(40px);        
     }
 
     .streetcodeMainPageContainer {
         box-sizing: border-box;
         width: 100%;
         height: 100%;
-         @include mut.flexed(column, start, space-around, nowrap);
+        @include mut.flexed(column, start, space-around, nowrap);
         display: flex;
-       
 
-        @include mut.rem-padded(28px, 0px, 0px, 0px);
         @media screen and (max-width: 1024px) {
                 @include mut.rem-padded(6px, 0px, 0px, 0px);
         }
@@ -143,28 +144,28 @@
         line-height: 23px;
         max-height: f.pxToRem(214px);
         overflow: auto;
-        color: #1D1F23;
+        color: c.$lighter-black-color;
         @include mut.with-font($font-weight: 300, $font-size: 20px);
 
         &::-webkit-scrollbar {
             display: none;
         }
+
         @media screen and (max-width: 1024px) {
             flex-direction: column;
             text-align: center;
         }
     }
 
-    
-
-
     .StreetcodeMainPageImg {
         margin: auto;
         @include mut.sized(225px, 307px);
+
         @media (min-width: 768px) and (max-width: 1024px) {
             @include mut.sized(200px, 261px);
             object-fit: cover;
         }
+
         @media screen and (max-width: 767px) {
             @include mut.sized(240px, 312px);
             object-fit: cover;
