--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -15,11 +15,11 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
         background-color: c.$pure-white-color;
-        margin-left: 20px;
+        margin-left: f.pxToRem(20px);
 
         @media (min-width: 768px) and (max-width: 1024px) {
             @include mut.sized(266px, 402px);
-            margin-bottom: 20px;
+            margin-bottom: f.pxToRem(20px);
         }
 
         @media screen and (max-width: 767px) {
@@ -99,7 +99,7 @@
       @include mut.truncated($line-num: 1);
       @include mut.with-font($font-weight: bolder);
       position: absolute;
-      bottom: 1px;
+      bottom: f.pxToRem(1px);
       display: flex;
       color: c.$dark-red-color;
 
@@ -141,7 +141,7 @@
         width: 100%;
         @include mut.rem-margined(12px, 3px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
-        line-height: 23px;
+        line-height: f.pxToRem(23px);
         max-height: f.pxToRem(214px);
         overflow: auto;
         color: c.$lighter-black-color;
