--- a/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
@@ -18,6 +18,7 @@
 .mainTextContent {
     white-space: pre-line;
     @include mut.rem-margined($bottom: 35px);
+    display: inline;
 }
 
 .textShort {
