main page fixes
replaced alias on text block heading in streetcode slider
cleaner code
background fix

--- a/src/features/MainPage/MainPage.styles.scss
+++ b/src/features/MainPage/MainPage.styles.scss
@@ -5,7 +5,10 @@
 @use "@sass/_utils.functions.scss" as f;
 @import 'react-toastify/dist/ReactToastify.css';
 
+$bgImg: '@assets/images/main-page/background.png';
+
 .mainPageContainer {
+    background: url($bgImg) no-repeat;
     width: 100%;
     overflow: clip;
     @include mut.rem-padded($top: 82px);
