--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -5,10 +5,7 @@
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-
 .mainPageStreetCodeSlider {
-  
-
     .itemStreetCodeMainPage {
         @include mut.flexed(row, center, center, wrap);
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
@@ -16,7 +13,7 @@
         @include mut.full-rounded(50px);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
-        background-color: #FFFFFF;
+        background-color: c.$pure-white-color;
         margin-left: 20px;
     }
 
@@ -24,7 +21,7 @@
         @include mut.full-rounded(53px);
         @include mut.sized(294px, 398px);
         flex: 0 0 f.pxToRem(294px);
-        background-color: #FFFFFF;
+        background-color: c.$pure-white-color;
         justify-self: flex-start;
     }
 
@@ -59,11 +56,10 @@
           text-decoration: underline;
       }
   }
-
-    .streercodeTitle {
+    .streetcodeTitle {
         @include mut.rem-padded($top: 18px, $right: 0px, $bottom: 0px, $left: 0px);
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
-        color: #1D1F23;
+        color: c.$lighter-black-color;
         line-height: f.pxToRem(40px);
     }
 
@@ -91,13 +87,12 @@
     }
 
     .streetcodeAlias {
-        color: #6D6D6D;
+        color: c.$checkbox-light-grey;
         @include mut.rem-margined(9px, 0px, 0px, 0px);
         @include mut.with-font($font-weight: 500, $font-size: 20px);
     }
 
-
-    .StreetcodeMainPageImg {
+    .streetcodeMainPageImg {
         margin: auto;
         @include mut.sized(225px, 307px);
     }
