almost finished but that installed eslint...

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -24,6 +24,7 @@ $dark-red-color: #891F16 !important;
 $accented-red-color: #E04031 !important;
 $text-red-color: #A4271B !important;
 $ant-menu-color: #E13F30 !important;
+$ant-menu-text-color:#ff4d4f!important;
 
 $slider-base-dot-color: #D9D9D9 !important;
 $timeline-reel-color: #D9D9D9 !important;
