--- a/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
+++ b/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
@@ -46,7 +46,7 @@
 .link-container{
     padding:5px;
     margin-bottom: 20px;
-    border: solid rgb(237, 231, 231) 1px ;
+    border: solid c.$lighter-gray-color 1px ;
     border-radius: 7px;
 }
 .link-container:hover{
