--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/DownloadStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/DownloadStyles.styles.scss
@@ -2,3 +2,9 @@
     border: 0.25rem solid red;
     border-radius: 11px;
 }
+
+.delete-arts-button{
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+}
