fixed side indentation Tablet version

--- a/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
@@ -14,8 +14,8 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         background-repeat: repeat-x;
     }
 
-    .mainBlock,
-    .blockCentering {
+    .mainBlock
+    .blockCenter {
         @include mut.flex-centered();
     }
 
