--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
@@ -12,7 +12,7 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         }
 
         .streetcodeSliderContentBlock,
-        .blockCentering {
+        .blockCenter {
             @include mut.flex-centered();
         }
 
@@ -60,5 +60,4 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         transform: scale(1.16);
         @include mut.rem-padded(0px, 16px, 20px, 16px);
     }
-}
 }
