--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -315,7 +315,7 @@ and (min-width: 768px) and (max-width: 1024px){
 }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 768px){
     .singleSlideContainer{
         margin-bottom: 3.0625rem;
         padding-top: 2.125rem;
@@ -333,13 +333,14 @@ and (min-width: 768px) and (max-width: 1024px){
         @include wr.main-page-block-wrapper();
         .slick-dots{
             bottom: 15%;
+            @include mut.sized($height: 80%);
         }
     }
 
     .interestingFactsSliderContainer {
         @include mut.sized(770px, 100%); 
     }
-
+    
     .interestingFactSlide{
         .slideImage {
             @include mut.sized($height: 45%);
@@ -369,5 +370,3 @@ and (min-width: 768px) and (max-width: 1024px){
         }
     }
 }
-
-
