Revert "Merge branch 'develop' of https://github.com/ita-social-projects/StreetCode_Client into multiple-deleting"
This reverts commit f3cab2cb404083359981280c337f6287f9bd2ff6, reversing
changes made to 1f831ad1a3e088220a1e85e9c9347a79623e0858.

--- a/src/features/MainPage/MainPage.styles.scss
+++ b/src/features/MainPage/MainPage.styles.scss
@@ -5,12 +5,10 @@
 @use "@sass/_utils.functions.scss" as f;
 @import 'react-toastify/dist/ReactToastify.css';
 
-$bgImg: '@assets/images/main-page/background.png';
-
 .mainPageContainer {
-    background: url($bgImg) no-repeat top / 100%;
-
     width: 100%;
+    overflow: clip;
+    @include mut.rem-padded($top: 82px);
 }
 
 .sticky {
@@ -33,3 +31,16 @@ $bgImg: '@assets/images/main-page/background.png';
 .dimmed {
     @include mut.sized(100%, 5875px);
 }
+
+@media screen and (max-width: 1024px) {
+    .mainPageContainer {
+        @include mut.rem-padded($top: 64px);
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .mainPageContainer {
+        background-image: none;
+    }
+}
+
