--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -5,7 +5,10 @@
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
+
 .mainPageStreetCodeSlider {
+  
+
     .itemStreetCodeMainPage {
         @include mut.flexed(row, center, center, wrap);
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
@@ -13,7 +16,7 @@
         @include mut.full-rounded(50px);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
-        background-color: c.$pure-white-color;
+        background-color: #FFFFFF;
         margin-left: 20px;
     }
 
@@ -21,7 +24,7 @@
         @include mut.full-rounded(53px);
         @include mut.sized(294px, 398px);
         flex: 0 0 f.pxToRem(294px);
-        background-color: c.$pure-white-color;
+        background-color: #FFFFFF;
         justify-self: flex-start;
     }
 
@@ -56,10 +59,11 @@
           text-decoration: underline;
       }
   }
-    .streetcodeTitle {
+
+    .streercodeTitle {
         @include mut.rem-padded($top: 18px, $right: 0px, $bottom: 0px, $left: 0px);
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
-        color: c.$lighter-black-color;
+        color: #1D1F23;
         line-height: f.pxToRem(40px);
     }
 
@@ -87,12 +91,13 @@
     }
 
     .streetcodeAlias {
-        color: c.$checkbox-light-grey;
+        color: #6D6D6D;
         @include mut.rem-margined(9px, 0px, 0px, 0px);
         @include mut.with-font($font-weight: 500, $font-size: 20px);
     }
 
-    .streetcodeMainPageImg {
+
+    .StreetcodeMainPageImg {
         margin: auto;
         @include mut.sized(225px, 307px);
     }
