--- a/src/features/MainPage/TopCarousel/TopCarousel.styles.scss
+++ b/src/features/MainPage/TopCarousel/TopCarousel.styles.scss
@@ -4,36 +4,25 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-.top-carousel {
-  @include mut.rem-padded($top: 82px);
-
-  .carousel-image {
-      width: 100%;
-      height: f.pxToRem(737px);
-  }
-
-  .slick-dots li button {
-    @include mut.sized(12px, 12px);
-  }
-
-  .slick-dots {
-    bottom: f.pxToRem(30px);;
-    top: auto;
-  }
-
-  .slick-dots li {
-    margin: 0 f.pxToRem(8px);
-  }
-
-  @media screen and (min-width: 1800px) {
-    .carousel-image {
-      height: f.pxToRem(830px);
-    }
-  }
+.carousel-image {
+    width: 100%;
+    height: 737px;
 }
 
-@media screen and (max-width: 1024px) {
-  .top-carousel {
-    @include mut.rem-padded($top: 64px);
+.top-carousel .slick-dots li button {
+  @include mut.sized(12px, 12px);
+}
+
+.top-carousel .slick-dots {
+  bottom: f.pxToRem(30px);;
+  top: auto;
+}
+
+.top-carousel .slick-dots li {
+  margin: 0 8px;
+}
+@media screen and (min-width: 1800px) {
+  .carousel-image {
+    height: 830px;
   }
 }
