--- a/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
@@ -12,8 +12,9 @@
     @include mut.with-font($font-weight: 300, $font-size:20px);
     text-align: justify;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     flex-wrap: wrap;
+
 }
 .textComponent {
     @include mut.flex-centered();
