fix styles in main card and remove sending base 64 with images

--- a/src/features/AdminPage/NewStreetcode/MainBlock/MainBlockAdmin.style.scss
+++ b/src/features/AdminPage/NewStreetcode/MainBlock/MainBlockAdmin.style.scss
@@ -11,6 +11,9 @@
 }
 
 .mainblock-add-form{   
+    .checknumber{
+        margin: 0 f.pxToRem(20px);
+    }
         .p-margin{ 
             gap:5px;
             p{
