--- a/src/features/AdminPage/NewsPage/NewsModal/NewsModal.styles.scss
+++ b/src/features/AdminPage/NewsPage/NewsModal/NewsModal.styles.scss
@@ -1,21 +1,22 @@
 @use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/_utils.functions.scss" as f;
 
 .star{
     display: inline-block;
-    margin-inline-end: 4px;
+    margin-inline-end: f.pxToRem(4px);
     color: c.$ant-menu-text-color;
-    font-size: 18px;
+    font-size: f.pxToRem(18px);
     font-family: SimSun,sans-serif;
     line-height: 1;
 }
 .required-text{
     cursor: default;
-    margin-bottom: 10px;
+    margin-bottom: f.pxToRem(10px);
   }
 .form-text{
     color: c.$ant-menu-text-color;
-    margin-bottom: 5px;
+    margin-bottom: f.pxToRem(5px);
 }
 .image-form-item{
-    margin-top: 25px;
+    margin-top: f.pxToRem(25px);
 }
