streetcode link background fix

--- a/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
@@ -5,6 +5,15 @@
 
 .activeLink {
   font-weight: 600;
+  &:hover{
+    font-weight: 1000;
+  }
+}
+
+.ant-breadcrumb{
+  a:hover{
+    background-color: transparent;
+  }
 }
 
 .breadcrumbContainer {
