Changes styles of chronology context counter

--- a/src/features/AdminPage/NewStreetcode/TimelineBlock/NewTimelineModal/NewTimelineModal.style.scss
+++ b/src/features/AdminPage/NewStreetcode/TimelineBlock/NewTimelineModal/NewTimelineModal.style.scss
@@ -2,8 +2,18 @@
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
-.data-container{
+
+.data-container {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.tagInput-counter {
+    position: absolute;
+    right: f.pxToRem(2px);
+    bottom: f.pxToRem(2px);
+    font-size: 17px;
+    font-weight: light;
+    color: rgba(154, 154, 154, 255);
 }
