--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -16,12 +16,13 @@
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
   @media screen and (max-width: 1024px) {
-    @include mut.sized(357px,76px);
+    @include mut.sized(100%,76px);
     top: 1px;
     z-index: 3;
     position:relative ;
     box-shadow: none;
-    border-radius:none;
+    border-radius:0;
+    background: none;
   }
 }
 
@@ -44,7 +45,7 @@
 
 .checkbox-text{
   @include mut.with-font(ft.$roboto-font, 500, 20px, normal);
-  @include mut.positioned-as(relative, $top: 4px);
+  @include mut.positioned-as(relative, $top: -2px);
   color: c.$normal-darker-gray-color;
 }
 .ant-checkbox{
