fixed displaying load gif on wide monitors

--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -92,3 +92,8 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     display: none !important;
 }
 
+@media (min-width: 1700px) {
+    .spinner{
+        @include mut.sized(100%,100%);
+    }
+}
