--- a/src/app/common/components/modals/Survey/SurveyModal.styles.scss
+++ b/src/app/common/components/modals/Survey/SurveyModal.styles.scss
@@ -4,9 +4,10 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 $StbgImg: '@assets/images/donates/bgStrLogo.png';
+
 .surveyModal {
-  width: f.pxToRem(748px) !important;
-  height: f.pxToRem(380px);
+  width: f.pxToRem(832px) !important;
+  height: f.pxToRem(414px);
  
   display: flex;
   justify-content: center;
@@ -18,7 +19,7 @@ $StbgImg: '@assets/images/donates/bgStrLogo.png';
       @include mut.flex-centered($direction: column);
       @include mut.full-rounded(30px, $overflow: visible);
       
-      @include mut.bg-image($StbgImg, auto, no-repeat);
+      @include mut.bg-image($StbgImg, 18%, no-repeat);
       background-position: center;
       padding: 0 !important;
       box-shadow: 0 7px 11px 2px rgba(0, 0, 0, 0.25);
@@ -45,7 +46,7 @@ $StbgImg: '@assets/images/donates/bgStrLogo.png';
 
 .surveyModalContent {
   @include mut.flex-centered($direction: column);
-  @include mut.rem-margined(40px, 20px, 40px, 20px);
+  @include mut.rem-margined(80px, 20px, 40px, 20px);
   
   text-align: center;
   
@@ -60,7 +61,7 @@ $StbgImg: '@assets/images/donates/bgStrLogo.png';
 
 
   .surveyModalBtnContainer {
-    @include mut.sized(240px, 60px);
+    @include mut.sized(220px, 55px);
     @include mut.rem-margined(16px, 0, 15px, 15px);
     @include mut.full-rounded(14px);
     background-color: c.$accented-red-color;
@@ -78,7 +79,7 @@ $StbgImg: '@assets/images/donates/bgStrLogo.png';
 
 
 @media screen and (max-width: 1024px) {
-  .donatesModal {
+  .surveyModal {
     @include mut.sizedImportant(340px, 316px);
     display: flex;
     justify-content: center;
@@ -128,29 +129,7 @@ $StbgImg: '@assets/images/donates/bgStrLogo.png';
         }
       }
 
-      .donatesInputContainer{
-        @include mut.sized(100%, 28px);
-        margin: 16px;
-        
-        >.checkbox-borderline {
-          display: flex;
-          overflow: visible !important;
-
-          > span{
-            display: inline-block;
-            vertical-align: middle;
-      
-            &:last-child {
-              @include mut.with-font(ft.$roboto-font, $font-size: 12px, $font-weight: 500);
-            
-              height: f.pxToRem(28px);
-              padding-top: f.pxToRem(2px);
-              font-style: normal;
-              line-height: f.pxToRem(14px);
-            }
-          }
-        }
-      }
+ 
     }
   }
 }
