--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -50,3 +50,5 @@ $catalog-background-color: #F5F5F5 !important;
 
 
 $hover-wow-fact-background: rgba(0, 0, 0, 0.5);
+$sliders-text-grey-color: #6D6D6D !important;
+$sliders-text-lighter-grey-color: #ADADAD !important;
