--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -14,7 +14,16 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
         background-color: c.$pure-white-color;
-        margin-left: 20px;
+        margin-left: f.pxToRem(20px);
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(266px, 402px);
+            margin-bottom: f.pxToRem(20px);
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(310px, 462px);
+        }
     }
 
     .leftSlider {
@@ -23,14 +32,32 @@
         flex: 0 0 f.pxToRem(294px);
         background-color: c.$pure-white-color;
         justify-self: flex-start;
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(266px, 338px);
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(100%, 398px);
+        }
     }
 
     .leftSliderContent {
         background-color: c.$accented-gray-color;
-        @include mut.border(c.$pure-white-color,22px,solid);
+        border: 22px solid c.$pure-white-color;
         @include mut.full-rounded(50px);
         @include mut.parent-sized();
         @include mut.flex-centered();
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(100%, 338px);
+            border-bottom: 0px !important;
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(100%, 398px);
+            border-bottom: 0px !important;
+        }
     }
 
     .rightSlider {
@@ -38,23 +65,59 @@
         @include mut.flexed(column, start, start, nowrap);
         justify-self: flex-end;
         align-self: flex-start;
+        max-height: fit-content;
         width: min-content;
         height: f.pxToRem(360px);
         flex: 1 1 auto;
         position: relative;
+
+        @media screen and (max-width: 1024px) {
+            height: fit-content;
+        
+            .textContainer {
+                height: 100%;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+            }
+        }
+    }
+
+    .streetcodeAlias {
+        color: c.$sliders-text-grey-color;
+        @include mut.rem-margined(9px, 0px, 0px, 0px);
+        @include mut.with-font($font-weight: 500, $font-size: 20px);
+
+        @media screen and (max-width: 1024px) {
+            @include mut.rem-margined(0px, 0px, 0px, 0px);
+            color: c.$lighter-black-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
+            line-height: f.pxToRem(14.06px);
+        }
     }
 
     .streetcodeLink {
       @include mut.truncated($line-num: 1);
       @include mut.with-font($font-weight: bolder);
       position: absolute;
-      bottom: 1px;
+      bottom: f.pxToRem(1px);
       display: flex;
       color: c.$dark-red-color;
 
       &:hover {
           text-decoration: underline;
       }
+
+        @media screen and (max-width: 1024px) {
+            @include mut.rem-margined(0px, 0px, 0px, 0px);
+            color: c.$dark-red-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
+            line-height: f.pxToRem(14.06px);
+            width: 100%;
+            position: unset;
+            text-decoration: underline;
+        }
   }
     .streetcodeTitle {
         @include mut.rem-padded($top: 18px, $right: 0px, $bottom: 0px, $left: 0px);
@@ -69,31 +132,43 @@
         height: 100%;
         @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded(28px, 0px, 0px, 0px);
+
+        @media screen and (max-width: 1024px) {
+            @include mut.rem-padded(6px, 0px, 0px, 0px);
+        }
     }
   
     .streetcodeTeaser {
         width: 100%;
         @include mut.rem-margined(12px, 3px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
-        line-height: 23px;
+        line-height: f.pxToRem(23px);
         max-height: f.pxToRem(214px);
         overflow: auto;
-        color: #1D1F23;
+        color: c.$lighter-black-color;
         @include mut.with-font($font-weight: 300, $font-size: 20px);
 
         &::-webkit-scrollbar {
             display: none;
         }
-    }
 
-    .streetcodeAlias {
-        color: c.$checkbox-light-grey;
-        @include mut.rem-margined(9px, 0px, 0px, 0px);
-        @include mut.with-font($font-weight: 500, $font-size: 20px);
+        @media screen and (max-width: 1024px) {
+            flex-direction: column;
+            text-align: center;
+        }
     }
 
     .streetcodeMainPageImg {
         margin: auto;
         @include mut.sized(225px, 307px);
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(200px, 261px);
+            object-fit: cover;
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(240px, 312px);
+            object-fit: cover;
+        }
     }
 }
