--- a/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
@@ -15,7 +15,7 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     }
 
     .mainBlock,
-    .blockCentering {
+    .blockCenter {
         @include mut.flex-centered();
     }
 
@@ -33,6 +33,10 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         ::-webkit-scrollbar {
             width: f.pxToRem(5px);
         }
+    }
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        height: 100%;
     }
 
     @media screen and (max-width: 1300px) {
@@ -67,6 +71,9 @@ $bgImg: '@assets/images/streetcode-card/background.png';
 
     .slick-slide {
         width: unset !important;
+        @media screen and (max-width: 767px) {
+            width: 100% !important;
+        }
     }
 
     .slick-initialized .slick-slide {
@@ -82,5 +89,13 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     .slick-initialized .slick-slide {
         @include mut.flexed($justify-content: center, $gap: 0px);
         @include mut.rem-margined($top: 0px, $right: 0px, $bottom: 10px, $left: 0px);
+    }
+
+    .slick-center {
+        transform: scale(1.16);
+        overflow: visible !important;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 20px;
     }
 }
