--- a/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
@@ -4,6 +4,11 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .teamItemSlider {
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        margin-bottom: f.pxToRem(30px);
+    }
+
     .itemTeam {
         @include mut.flexed(row, center, center, wrap);
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
@@ -11,24 +16,67 @@
         @include mut.full-rounded(50px);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         line-height: f.pxToRem(23px);
-        background-color: #FFFFFF;
-        margin-left: 20px;
+        background-color: c.$pure-white-color;
+        margin-left: f.pxToRem(20px);
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            margin-top: f.pxToRem(40px);
+            @include mut.sized(266px, 402px);
+            padding-bottom: f.pxToRem(20px);
+        }
+
+        @media screen and (max-width: 767px) {
+            @include mut.sized(310px, 475px);
+        }
     }
 
     .leftSlider {
         @include mut.full-rounded(53px);
         @include mut.sized(294px, 311px);
-        flex: 0 0 f.pxToRem(294px);
-        background-color: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        background-color: c.$pure-white-color;
         justify-self: flex-start;
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(250px, 338px);
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(294px, 398px);
+        }
     }
 
     .leftSliderContent {
-        background-color: c.$accented-gray-color;
-        @include mut.border(c.$pure-white-color,22px,solid);
+        background-color: c.$pure-white-color;
+        margin: f.pxToRem(10px);
         @include mut.full-rounded(50px);
-        @include mut.parent-sized();
         @include mut.flex-centered();
+
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(100%, 338px);
+            margin: 0px;
+        }
+        
+        @media screen and (max-width: 767px) {
+            @include mut.sized(100%, 398px);
+            margin: f.pxToRem(8px);
+        }
+    }
+       
+    .teamImg {
+        @include mut.sized(100%, 100%);
+        overflow: visible !important;
+    
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(100%, 100%);
+            object-fit: cover;
+        }
+    
+        @media screen and (max-width: 767px) {
+            @include mut.sized(100%, 100%);
+            object-fit: cover;
+        }
     }
 
     .rightSlider {
@@ -41,22 +89,39 @@
         padding-top: f.pxToRem(20px);
         flex: 1 1 auto;
         position: relative;
+
+        @media screen and (max-width: 1024px) {
+            padding-top: 0%;
+        }
     }
 
     .teamLinkItems {
         position: absolute;
-        bottom: 33.5px;
+        bottom: f.pxToRem(33.5px);
         display: flex;
         align-items: center;
         .teamLinkItem {
             @include mut.rem-margined(0px, 17px, 0px, 0px);
         }
+        
+        @media screen and (max-width: 1024px) {
+            margin-top: f.pxToRem(4px);
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+            line-height: f.pxToRem(23px);
+        }
     }
 
     .teamTitle {
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
-        color: #1D1F23;
+        color: c.$lighter-black-color;
         line-height: f.pxToRem(40px);
+
+        @media screen and (max-width: 1024px) {
+            margin-top: f.pxToRem(6px);
+            margin-bottom: f.pxToRem(4px);
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+            line-height: f.pxToRem(23px);
+        }
     }
 
     .headerTeamContainer {
@@ -65,6 +130,16 @@
         height: 100%;
         @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded(28px, 0px, 0px, 0px);
+
+        @media screen and (max-width: 1024px) {
+            .textContainer {
+                width: 100%;
+                height: 100%;
+                text-align: center;
+            }
+            
+            @include mut.rem-padded(0px, 0px, 0px, 0px);
+        }
     }
 
     .descBlock {
@@ -74,23 +149,31 @@
         line-height: 23px;
         max-height: f.pxToRem(214px);
         overflow: auto;
-        color: #1D1F23;
+        color: c.$lighter-black-color;
         @include mut.with-font($font-weight: 300, $font-size: 20px);
 
         &::-webkit-scrollbar {
             display: none;
         }
+
+        @media screen and (max-width: 1024px) {
+            color: c.$sliders-text-lighter-grey-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 300, $font-size: 15px);
+            line-height: f.pxToRem(18px);
+            @include mut.rem-margined(0px, 0px, 20px, 0px);
+        }
     }
 
     .teamPosition {
-        color: #6D6D6D;
+        color: c.$sliders-text-grey-color;
         @include mut.rem-margined(9px, 0px, 0px, 0px);
         @include mut.with-font($font-weight: 500, $font-size: 20px);
-    }
 
-
-    .teamImg {
-        margin: auto;
-        @include mut.sized(284px, 301px);
+        @media screen and (max-width: 1024px) {
+            color: c.$sliders-text-lighter-grey-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 300, $font-size: 15px);
+            line-height: f.pxToRem(18px);
+            @include mut.rem-margined(0px, 0px, 20px, 0px);
+        }
     }
 }
