centred slides on mobile devices

--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -23,6 +23,7 @@
         
         @media screen and (max-width: 767px) {
             @include mut.sized(310px, 462px);
+            margin-left: f.pxToRem(0px);
         }
     }
 
