--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
@@ -57,9 +57,9 @@ $bgImg: '@assets/images/streetcode-card/background.png';
 
         .slick-center {
             transform: scale(1.16);
-            padding-left: 16px;
-            padding-right: 16px;
-            padding-bottom: 20px;
+            padding-left: f.pxToRem(16px);
+            padding-right: f.pxToRem(16px);
+            padding-bottom: f.pxToRem(20px);
         }
     }
 }
