--- a/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamComponent.styles.scss
@@ -94,8 +94,8 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     .slick-center {
         transform: scale(1.16);
         overflow: visible !important;
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-bottom: 20px;
+        padding-left: f.pxToRem(16px);
+        padding-right: f.pxToRem(16px);
+        padding-bottom: f.pxToRem(20px);
     }
 }
