--- a/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
@@ -28,6 +28,10 @@
 
     .slick-slide {
         width: unset !important;
+        
+        @media screen and (max-width: 767px) {
+                width: 100% !important;
+            }
     }
 
     .slick-initialized .slick-slide {
