--- a/src/app/layout/header/HeaderBlock.styles.scss
+++ b/src/app/layout/header/HeaderBlock.styles.scss
@@ -57,7 +57,7 @@ $navbar-hidden-innerwidth: 400px;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: f.pxToRem(15px);
 }
 
 .rightPartContainer {
@@ -125,7 +125,7 @@ $navbar-hidden-innerwidth: 400px;
 @media screen and (max-width: 1024px) { 
   .navBarContainer {
     @include mut.sized($width: 100%, $height: 64px);
-    @include mut.rem-padded(15px, 0, 15px, 0);
+    @include mut.rem-padded(15px, 12px, 15px, 12px);
 
     .ant-input-affix-wrapper,
     .loginBtn {
@@ -133,6 +133,14 @@ $navbar-hidden-innerwidth: 400px;
     }
     
     .leftPartContainer {
+        .logoContainer {
+            height: 34px;
+            svg
+            {
+                width: 100%;
+                height: f.pxToRem(34px);
+            }}
+            
       .ant-input {
         width: 90% !important;
         margin: 300px;
